--- a/site/package.json
+++ b/site/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "codemirror": "^6.0.1",
     "webrick": "file:../crate/pkg"
   },
   "devDependencies": {
